--- a/.github/workflows/msbuild.yml
+++ b/.github/workflows/msbuild.yml
@@ -4,7 +4,7 @@ on: [push]
 
 env:
   # Path to the solution file relative to the root of the project.
-  SOLUTION_FILE_PATH: src
+  SOLUTION_FILE_PATH: ""
 
   # Configuration type to build.
   # You can convert this to a build matrix if you need coverage of multiple configuration types.
@@ -33,8 +33,8 @@ jobs:
       
     - name: Test x86
       run: dotnet test --verbosity normal --framework net472 --runtime win-x86
-      working-directory:  ${{env.SOLUTION_FILE_PATH}}/LevelDB.Tests/
+      working-directory:  ${{env.GITHUB_WORKSPACE}}/LevelDB.Tests/
       
     - name: Test x64
       run: dotnet test --verbosity normal --framework net472 --runtime win-x64
-      working-directory:  ${{env.SOLUTION_FILE_PATH}}/LevelDB.Tests/
+      working-directory:  ${{env.GITHUB_WORKSPACE}}/LevelDB.Tests/
