--- a/LevelDB.NET/LevelDB.NET.csproj
+++ b/LevelDB.NET/LevelDB.NET.csproj
@@ -1,9 +1,8 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk" ToolsVersion="15.0">
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
-    <FileUpgradeFlags>40</FileUpgradeFlags>
+    <Version>1.0.0</Version>
     <OldToolsVersion>15.0</OldToolsVersion>
-    <UpgradeBackupLocation>C:\Users\siarhei.hanich\source\repos\leveldb.net\Backup1\</UpgradeBackupLocation>
     <Company>Soft-Fx</Company>
     <Authors>Siarhei Hanich</Authors>
     <Description>Open source leveldb wrapper for Windows using .NET Standard 2.0</Description>
@@ -14,7 +13,6 @@
     <PackageReleaseNotes></PackageReleaseNotes>
     <Copyright></Copyright>
     <PackageLicenseExpression>MPL-2.0</PackageLicenseExpression>
-    <Product>Soft-Fx.LevelDB.NET</Product>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
