--- a/LevelDB.NET/LevelDB.NET.csproj
+++ b/LevelDB.NET/LevelDB.NET.csproj
@@ -4,11 +4,11 @@
     <Version>1.0.0</Version>
     <OldToolsVersion>15.0</OldToolsVersion>
     <Company>Soft-Fx</Company>
-    <Authors>Siarhei Hanich</Authors>
+    <Authors>Soft-Fx, Siarhei Hanich</Authors>
     <Description>Open source leveldb wrapper for Windows using .NET Standard 2.0</Description>
     <PackageTags>#leveldb</PackageTags>
     <RepositoryUrl>https://github.com/SoftFx/leveldb.net</RepositoryUrl>
-    <PackageId>SoftFX.LevelDB.NET</PackageId>
+    <PackageId>SoftFX.LevelDB.Standard</PackageId>
     <PackageProjectUrl>https://github.com/SoftFx/leveldb.net</PackageProjectUrl>
     <PackageReleaseNotes></PackageReleaseNotes>
     <Copyright></Copyright>
