--- a/.github/workflows/ubuntu.yml
+++ b/.github/workflows/ubuntu.yml
@@ -23,7 +23,7 @@ jobs:
       run: dotnet restore
 
     - name: Build
-      run: dotnet build --c Release --no-restore
+      run: dotnet build --configuration Release --no-restore
     
     - name: Test x64
       run: dotnet test --no-build --verbosity normal 
