--- a/.github/workflows/ubuntu.yml
+++ b/.github/workflows/ubuntu.yml
@@ -27,4 +27,4 @@ jobs:
     
     - name: Test x64
       run: dotnet test --configuration Release --verbosity normal 
-      working-directory: LevelDB.Tests/
+      working-directory: LevelDB.Tests/bin/Release/net5.0/LevelDB.NET.Tests.dll
