--- a/.github/workflows/ubuntu.yml
+++ b/.github/workflows/ubuntu.yml
@@ -26,5 +26,5 @@ jobs:
       run: dotnet build --configuration Release --no-restore
     
     - name: Test x64
-      run: dotnet test --configuration Release --os linux --verbosity normal 
+      run: dotnet test --configuration Release --framework net5.0 --verbosity normal 
       working-directory: LevelDB.Tests/
