--- a/LevelDB.NET/LevelDB.NET.csproj
+++ b/LevelDB.NET/LevelDB.NET.csproj
@@ -1,11 +1,11 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk" ToolsVersion="15.0">
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
-    <Version>1.0.0</Version>
+    <Version>1.0.1</Version>
     <OldToolsVersion>15.0</OldToolsVersion>
     <Company>Soft-Fx</Company>
     <Authors>Soft-Fx, Siarhei Hanich</Authors>
-    <Description>Open source leveldb wrapper for Windows using .NET Standard 2.0</Description>
+    <Description>Open source leveldb wrapper for Windows and Lunux using .NET Standard 2.0</Description>
     <PackageTags>#leveldb</PackageTags>
     <RepositoryUrl>https://github.com/SoftFx/leveldb.net</RepositoryUrl>
     <PackageId>SoftFX.LevelDB.Standard</PackageId>
