--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -25,7 +25,7 @@ jobs:
       run: dotnet build --configuration Release --no-restore
       working-directory: ${{env.GITHUB_WORKSPACE}}
 
-    - name: Publish SoftFx.LevelDB.NET
+    - name: Publish SoftFX.LevelDB.Standard
       uses: brandedoutcast/publish-nuget@v2.5.2
       with:
           PROJECT_FILE_PATH: LevelDB.NET/LevelDB.NET.csproj
